--- a/project0/index.html
+++ b/project0/index.html
@@ -6,15 +6,15 @@
      </head>
     <body>
         <div id="nav">
-            <a>Image</a>
-            <a>Advanced</a>
+            <a href="./image.html">Image</a>
+            <a href="./advanced.html">Advanced</a>
         </div>
         <div id="logo">
             <img id="logo-img" src="./images/google_logo.png" alt="google_logo" style="width:360px;height:auto;">
         </div>
         <div id="search">
-            <form action="https://www.google.com/search">
-            <input autofocus type="text" name="q">
+            <form  action="https://www.google.com/search">
+            <input autofocus type="search" name="q">
             <div id="submits">
                 <input type="submit" value="Google Search">
                 <input type="submit" value="I'm Feeling Lucky">
