--- a/project0/advanced.html
+++ b/project0/advanced.html
@@ -1,9 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
-    </head>
+        <title>Search</title>
+        <link rel="stylesheet" href="styles.css">
+     </head>
     <body>
-        <p>for advanced</p>
+        <div class="nav">
+            <div class="left-container">
+                <img id="logo-img" src="./images/google_logo.png" alt="google_logo" style="width:120px;height:auto;">
+            </div>
+            <div class="right-container">
+                <a href="./index.html">Main</a>
+                <a href="./image.html">Image    </a>
+            </div>
+        </div>
+        <div class="title">
+            <h2>Advanced Search</h2>
+        </div>
+        <div class="container">
+            <h3 style="text-indent: 2%;">Find pages with...</h3>
+            <form  action="https://www.google.com/search">
+                <div class="search-bar">
+                    <h4>all these words:</h4>
+                    <input id="search-long" autofocus type="search" name="as_q">
+                </div>  
+                <div class="search-bar">
+                    <h4>these exact word or phrase:</h4>
+                    <input id="search-long" autofocus type="search" name="as_epq">
+                </div>
+                <div class="search-bar">
+                    <h4>any of these words:</h4>
+                    <input id="search-long" autofocus type="search" name="as_oq">
+                </div>
+                <div class="search-bar">
+                    <h4>none of these:</h4>
+                    <input id="search-long" autofocus type="search" name="as_eq">
+                </div>
+                <div class="submits">
+                <input id="advanced-btn" type="submit" value="Advanced Search">
+                </div>
+            </form>
+        </div>
     </body>
 </html>
