--- a/project0/index.html
+++ b/project0/index.html
@@ -5,19 +5,19 @@
         <link rel="stylesheet" href="styles.css">
      </head>
     <body>
-        <div id="nav">
+        <div class="nav" style="justify-content: right;">
             <a href="./image.html">Image</a>
             <a href="./advanced.html">Advanced</a>
         </div>
         <div id="logo">
             <img id="logo-img" src="./images/google_logo.png" alt="google_logo" style="width:360px;height:auto;">
         </div>
-        <div id="search">
+        <div class="container" style="text-align: center;">
             <form  action="https://www.google.com/search">
             <input autofocus type="search" name="q">
-            <div id="submits">
+            <div class="submits">
                 <input type="submit" value="Google Search">
-                <input type="submit" value="I'm Feeling Lucky">
+                <input type="submit" name="btnI" value="I'm Feeling Lucky">
             </div>
         </form>
         </div>
