--- a/week4/addition.html
+++ b/week4/addition.html
@@ -4,6 +4,23 @@
         <title>Counter</title>
         <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
+        <style> 
+        #app {
+            text-align: center;
+            font-family: sans-serif;
+        }
+        #problem {
+            font-size: xx-large;
+        }
+        .incorrect {
+            color:red;
+        }
+        #winner {
+            font-size: 72px;
+            color:green;
+        }
+        </style>
+
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     </head>
     <body>
@@ -12,19 +29,60 @@
         <script type="text/babel">
 
             function App () {
-                    // creatin multiple state at the same time
-                    const [state, setState] = React.useState({
-                    num1: 1,
-                    num2: 2,
-                    response: ""
-                })
-                return (
-                <div>
-                    <div>{state.num1} + {state.num2}</div>
-                    <input value={state.response} />
 
-                </div>
-            );}
+                const [state, setState] = React.useState({
+                    num1:1,
+                    num2:2,
+                    score:0,
+                    response: "",
+                    incorrect: false
+                });
+                
+                function updateResponse(event) {
+                    setState({
+                        ...state, //spread operator. use existing values 
+                        response:event.target.value
+                    });
+                }
+
+                function inputKeyPress(event) {
+                    if (event.key === "Enter") {
+                        const answer = parseInt(state.response);
+                        if (state.num1 + state.num2 === answer) {
+                            setState({
+                                ...state,
+                                num1: Math.ceil(Math.random() * 10),
+                                num2: Math.ceil(Math.random() * 10),
+                                score: state.score + 1,
+                                response: "",
+                                incorrect:false
+                            })
+                        }
+                        else {
+                            setState({
+                                ...state,
+                                score: state.score - 1,
+                                response:"",
+                                incorrect: true
+                            })
+                        }
+                    }
+                }
+
+                if (state.score === 10) {
+                    return (
+                        <div id="winner">You've won!</div>
+                    );
+                }
+
+                return (
+                    <div>
+                        <div className={state.incorrect ? "incorrect" : ""} id="problem">{state.num1} + {state.num2}</div>
+                        <input autoFocus={true} onKeyPress={inputKeyPress} onChange={updateResponse} value={state.response}/>
+                        <div>Score: {state.score}</div>
+                    </div>
+                )
+            }
             ReactDOM.render(<App />, document.querySelector('#app'));
         </script>
     </body>
